Avoid title or file name spilling onto the content

--- a/public/layout.css
+++ b/public/layout.css
@@ -25,6 +25,7 @@
    width: 19%;
    height: 100%;
    float: left;
+   overflow: hidden;
 }
 
 .housenotecontainer {
